--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "navbar": "^3.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.30.2"
+    "react-router-dom": "^6.30.2",
+      "serve": "^14.2.1"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
