--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,10 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.2",
     "serve": "^14.2.1"
-
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@rollup/wasm-node": "^4.53.3",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
